add_library (Finite_diff
app_cir_hex.c
app_cir_beta_fourth.c
app_cilr_drive.c
app_cilr_sixth.c
app_cir_fcc.c
app_cir_ortho.c
app_cir_bcc.c
app_cil.c
app_cir.c
app_cir_beta_sixth.c
app_cir_driver.c
app_cilr_fourth.c
FiniteDiff.cpp
app_cil_driver.cpp
app_cir_driver.cpp
app_cir_fcc.cpp
app_cir_bcc.cpp
app_cir_hex.cpp
)
include_directories("${RMG_SOURCE_DIR}/Headers/")

