add_library (Finite_diff
ApplyGradient.cpp
AppGradPfft.cpp
ApplyLaplacian.cpp
ApplyAOperator.cpp
ApplyBOperator.cpp
AppCir.cpp
AppCilrFourth.cpp
AppCilrSixth.cpp
AppCilrDriver.cpp
app_cir_beta_fourth.c
app_cir_fcc.c
app_cir_ortho.c
app_cir_bcc.c
app_cir_beta_sixth.c
app_cir_driver.c
FiniteDiff_Cbindings.cpp
app_cir_fcc.cpp
app_cir_bcc.cpp
app_grad.c
app6_del2.c
)
include_directories("${RMG_SOURCE_DIR}/Headers/")

