add_library (Input
ReadRmgAtoms.cpp
ReadDynamics.cpp
Verify.cpp
InputKey.cpp
CheckValue.cpp
RmgInputFile.cpp
ReadCommon.cpp
MapElements.cpp
Upf.cpp
ReadPseudo.cpp
read_init.c
countItems.c
pdb_clean.c
assign.c
killNode.c
popItem.c
sstripcmnt.c
unlinkNode.c
linkNode.c
tagsload.c
fcatItem.c
get_data.c
pushItem.c
tagstrip.c
input.c
read_pseudo.c
fcatNode.c
get_symbol.c
newItem.c
newNode.c
findNode.c
assign_species.c
verify.c
appendItem.c
catNodes.c
filetostr.c
itemize.c
validate.c
read_common.c
cast.c
)
include_directories("${RMG_SOURCE_DIR}/Headers/")
if(OPENBABEL_FOUND)
get_filename_component(OPENBABEL_PARENT_DIR ${OPENBABEL_INCLUDES} PATH)
include_directories("${OPENBABEL_PARENT_DIR}")
endif(OPENBABEL_FOUND)

