add_library (Misc
PulayMixing.cpp
LaplacianCoeff.cpp
FiniteDiffLap.cpp
SetLaplacian.cpp
app_smooth.cpp
IonIonEnergy_Ewald.cpp
InitPe4image.cpp
InitPe4kpspin.cpp
SharedMemory.cpp
VhDriver.cpp 
Pw.cpp
PfftForward.cpp
PfftInverse.cpp 
LocalFftForward.cpp
LocalFftInverse.cpp 
GeneralDiag.cpp
VhPfft.cpp
VhDriver.cpp
Fft_Cbindings.cpp
GetVtotPsi.cpp
FftInitPlans.cpp
FftFreqBin.cpp
FftFilter.cpp
FftLaplacian.cpp
FftGradient.cpp
FftInterpolation.cpp
FftRestrict.cpp
FftSmoother.cpp
fft3d.cpp
CountAtomicOrbitals.cpp
FilenameIncrement.cpp
Scalapack.cpp
Smooth.cpp
Elpa.cpp
open_restart_file.c
cnpy.cpp
LinePlot.cpp
prime_factors.c
InitIo.cpp
Output_rho_xsf.cpp
InitHybridModel.cpp
Fill.cpp
GetTe.cpp
init_kpoints.c
FileOpenAndCreate.cpp
CreateMmapArray.cpp
DeleteNvmeArrays.cpp
RmgCudaError.cpp
MyZgemm.cpp
RmgGemm.cpp
RmgSymm.cpp
RmgSyrkx.cpp
GpuAlloc.cpp
GpuAllocHost.cpp
GpuAllocManaged.cpp
#RmgTimer_Cbindings.cpp
GlobalSums.cpp
GlobalSums_Cbindings.cpp
InvertMatrix.cpp
DsyevjDriver.cpp
DsyevdDriver.cpp
DsygvdDriver.cpp
DsygvjDriver.cpp
ZhegvdDriver.cpp
BaseThread_Cbindings.cpp
TradeImages_Cbindings.cpp
RmgSumAll_Cbindings.cpp
packfuncs_Cbindings.cpp
pack_dtos.cpp
pack_stod.cpp
BaseGrid_Cbindings.cpp
Lattice_Cbindings.cpp
transition.cpp
init_states.c
get_index.cpp
get_te.c
minimage.cpp
get_vtot_psi.c
blaswrappers.c
set_bc.c
cgen_prolong.c
mg_restrict_6.c
mg_prolong_MAX10.c
init_pos.cpp
rmg_error.c
rmg_alloc.c
sl_init_comm.c
get_opposite_occupancies.c
get_opposite_eigvals.c
Fill_on.cpp
remap.cpp
get_tf_rho.c
Vdd.cpp
WriteChargeAnalysis.cpp
get_dipole.c
)
include_directories("${RMG_SOURCE_DIR}/Headers/")
include_directories(${MAGMA_INCLUDES})
include_directories(${MAGMA_INCLUDES}/magma)
if(PLplot_LIBRARY)
    include_directories(${PLplot_INCLUDE_DIR})
    include_directories(${PLplot_INCLUDE_DIR}/plplot)
endif(PLplot_LIBRARY)

