add_library (Misc
PulayMixing.cpp
SetLaplacian.cpp
IonIonEnergy_Ewald.cpp
InitPe4image.cpp
InitPe4kpspin.cpp
VhDriver.cpp 
Pw.cpp
PfftForward.cpp
PfftInverse.cpp 
LocalFftForward.cpp
LocalFftInverse.cpp 
GeneralDiag.cpp
VhPfft.cpp
VhDriver.cpp
Fft_Cbindings.cpp
GetVtotPsi.cpp
FftInitPlans.cpp
FftFreqBin.cpp
FftFilter.cpp
FftLaplacian.cpp
FftGradient.cpp
FftInterpolation.cpp
FftRestrict.cpp
FftSmoother.cpp
fft3d.cpp
CountAtomicOrbitals.cpp
FilenameIncrement.cpp
Scalapack.cpp
Smooth.cpp
Elpa.cpp
open_restart_file.cpp
cnpy.cpp
LinePlot.cpp
prime_factors.cpp
InitIo.cpp
Output_rho_xsf.cpp
InitHybridModel.cpp
Fill.cpp
GetTe.cpp
init_kpoints.cpp
FileOpenAndCreate.cpp
CreateMmapArray.cpp
DeleteNvmeArrays.cpp
RmgCudaError.cpp
MyZgemm.cpp
RmgGemm.cpp
RmgSymm.cpp
RmgSyrkx.cpp
GpuAlloc.cpp
GpuAllocHost.cpp
GpuAllocManaged.cpp
GlobalSums.cpp
GlobalSums_Cbindings.cpp
InvertMatrix.cpp
DsyevjDriver.cpp
DsyevdDriver.cpp
DsygvdDriver.cpp
DsygvjDriver.cpp
ZhegvdDriver.cpp
BaseThread_Cbindings.cpp
TradeImages_Cbindings.cpp
RmgSumAll_Cbindings.cpp
packfuncs_Cbindings.cpp
pack_dtos.cpp
pack_stod.cpp
BaseGrid_Cbindings.cpp
Lattice_Cbindings.cpp
transition.cpp
init_states.cpp
get_index.cpp
get_vtot_psi.cpp
blaswrappers.cpp
set_bc.cpp
cgen_prolong.cpp
mg_prolong_MAX10.cpp
init_pos.cpp
rmg_error.cpp
rmg_alloc.cpp
get_opposite_occupancies.cpp
get_opposite_eigvals.cpp
remap.cpp
get_tf_rho.cpp
Vdd.cpp
WriteChargeAnalysis.cpp
get_dipole.cpp
get_rho_oppo.cpp
)
include_directories("${RMG_SOURCE_DIR}/Headers/")
include_directories(${MAGMA_INCLUDES})
include_directories(${MAGMA_INCLUDES}/magma)
if(PLplot_LIBRARY)
    include_directories(${PLplot_INCLUDE_DIR})
    include_directories(${PLplot_INCLUDE_DIR}/plplot)
endif(PLplot_LIBRARY)

